# eolabs

./: README.md  eo_lab_1.ipynb  pyproject.toml
lab_1/: aral_comparison.ipynb
lab_2/: aral_lab_2.ipynb
lab_4/notebooks/: fire_detection.ipynb
