[project]
name = "eolabs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "planetary-computer>=1.0.0",
    "pystac-client>=0.9.0",
    "rasterio>=1.5.0",
]

[tool.uv.workspace]
members = [
    "dummy",
]
